--- a/bms-client/src/app/layout/dashboard/components/chat/chat.component.html
+++ b/bms-client/src/app/layout/dashboard/components/chat/chat.component.html
@@ -108,7 +108,7 @@
     <!-- /.card-body -->
     <div class="card-footer">
         <div class="input-group">
-            <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here...">
+            <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your errorMessage here...">
             <span class="input-group-btn">
                 <button class="btn btn-warning btn-sm" id="btn-chat">
                     Send
