--- a/bms-client/src/app/layout/bs-element/bs-element.component.html
+++ b/bms-client/src/app/layout/bs-element/bs-element.component.html
@@ -1,6 +1,6 @@
 <div [@routerTransition]>
     <app-page-header [heading]="'Bootstrap Elements'" [icon]="'fa-desktop'"></app-page-header>
-    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <!-- Main jumbotron for a primary marketing errorMessage or call to action -->
     <div class="jumbotron">
         <h1>Hello, world!</h1>
         <p>
@@ -126,7 +126,7 @@
         <hr>
     </div>
     <div class="alert alert-success">
-        <strong>Well done!</strong> You successfully read this important alert message.
+        <strong>Well done!</strong> You successfully read this important alert errorMessage.
     </div>
     <div class="alert alert-info">
         <strong>Heads up!</strong> This alert needs your attention, but it's not super important.
